[metadata]
name = mclogparser-minhncrypted
version = 0.0.1
author = Minh Nguyen
author_email = minhnguyen1205@outlook.com
description = Tool to parse Minecraft log file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/minhnguyencrypted/mc_server_utils
project_urls =
    Bug Tracker = https://github.com/minhnguyencrypted/mc_server_utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src